--- a/CustomerService/src/main/resources/application.properties
+++ b/CustomerService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/lendingdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=zack1
