--- a/CustomerService/src/main/resources/application.properties
+++ b/CustomerService/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 server.port=8082
 spring.application.name=customer-service
-spring.datasource.url=jdbc:mysql://localhost:3306/lendingdb?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=zack1
+#spring.datasource.url=jdbc:mysql://localhost:3306/lendingdb?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=zack1
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:h2:mem:lending-db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Hibernate-JPA properties
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
