--- a/.buddy/BookLendingApp.fixed.yml
+++ b/.buddy/BookLendingApp.fixed.yml
@@ -6,3 +6,13 @@
     - "refs/heads/main"
     - ":default"
   fail_on_prepare_env_warning: true
+  actions:
+  - action: "mvn clean install"
+    type: "BUILD"
+    docker_image_name: "library/maven"
+    docker_image_tag: "3.8.6"
+    execute_commands:
+    - "mvn clean install"
+    cached_dirs:
+    - "/root/.m2/repository"
+    shell: "BASH"
