Pipeline changed by buddy

--- a/.buddy/BookLendingApp.fixed.yml
+++ b/.buddy/BookLendingApp.fixed.yml
@@ -16,3 +16,8 @@
     cached_dirs:
     - "/root/.m2/repository"
     shell: "BASH"
+  - action: "Push to https://github.com/LC-galaxy-Gurus/Book-Lending-Application-Java-SpringBoot.git"
+    type: "PUSH"
+    target_branch: "$BUDDY_EXECUTION_BRANCH"
+    push_url: "https://github.com/LC-galaxy-Gurus/Book-Lending-Application-Java-SpringBoot.git"
+    comment: "$BUDDY_EXECUTION_ID"
