--- a/BookService/pom.xml
+++ b/BookService/pom.xml
@@ -63,6 +63,17 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>2.3.3.RELEASE</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.11.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
