GG-101 committed after written the test case

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <groupId>groupId</groupId>
     <artifactId>Book-Lending-Application-Java-SpringBoot</artifactId>
